# learner_models

./: Cargo.toml  Evals_analysis.ipynb  README.md  evals.csv  evals.json  test.json
.ipynb_checkpoints/: Evals_analysis-checkpoint.ipynb
data/: evals.csv  evaluations.json  learners.json  offerings.json  registrations.json  test_dashboard.pbix
src/: learner.rs  lib.rs  main.rs  mod.rs
src/generators/: generate_csv.rs  generate_infrastructure.rs  generate_learning_products.rs  generate_offerings.rs  mod.rs  simulation.rs
src/models/: content.rs  demographic.rs  evaluation.rs  experience.rs  inclusive_lens.rs  infrastructure.rs  learner.rs  learning_object.rs  learning_product.rs  location.rs  mod.rs  personnel.rs  quiz.rs  registration.rs  user.rs  utilities.rs  web_page.rs
