[package]
name = "learners"
version = "0.1.0"
authors = ["toferc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
fake = { version = "2.2.2", features=["derive"]}
reqwest = "0.10.6"
serde = {version = "1.0.114", features = ["derive", "chrono"] }