[package]
name = "learners"
version = "0.1.0"
authors = ["toferc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
fake = { version = "2.2.3", features=["derive", "chrono"]}
reqwest = "0.10.6"
serde = {version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
rand = "0.7.3"
rand_distr = "0.2.2"
rand_xorshift = "^0.2.0"
plotters = "^0.2.15"
csv = "1.1.3"